# phenobase

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tmux.zsh
.github/workflows/: python-app.yml
args/: ensemble_archive.bash  ensemble_best_3combo_acc.bash  ensemble_format.bash  ensemble_inferred_audit_best_3combo_fract.bash  ensemble_inferred_sample.bash  ensemble_sample.bash  ensemble_search.bash  ensemble_vote.bash  ensemble_vote_holdout.bash  local_effnet.bash  local_mae_224_pretraining.bash  local_vit_224.bash  local_vit_224_flowers.bash  local_vit_224_train.bash  local_vit_384.bash  mae_224_pretraining.bash  mae_224_pretraining_local.bash  model_family_score.bash  model_score.bash  model_score_flowers.bash  model_threshold_moving.bash  model_threshold_moving_old.bash  model_train.args  score_model.bash  score_models.bash  slurm_effnet_528.bash  slurm_effnet_528_flowers.bash  slurm_effnet_528_fruits.bash  slurm_effnet_528_leaves.bash  slurm_effnet_600.bash  slurm_effnet_all_528_wt.bash  slurm_junk.bash  slurm_mae_224_pretraining.bash  slurm_vit_224.bash  slurm_vit_224_flowers.bash  slurm_vit_224_fruits.bash  slurm_vit_224_leaves.bash  slurm_vit_224_mae.bash  slurm_vit_224_reproductive_structure.bash  slurm_vit_224_train.bash  (+25 more)
args/download/: slurm_download_resize_10K.bash
args/effnet_528/: slurm_effnet_528_all_prec_wt.bash  slurm_effnet_528_flowers.bash  slurm_effnet_528_flowers_f1.bash  slurm_effnet_528_flowers_f1_wt.bash  slurm_effnet_528_flowers_prec_nowt.bash  slurm_effnet_528_flowers_prec_wt.bash  slurm_effnet_528_fruits_f1_wt.bash  slurm_effnet_528_fruits_prec_nowt.bash  slurm_effnet_528_fruits_prec_wt.bash  slurm_effnet_528_leaves_f1_wt.bash  slurm_effnet_528_leaves_prec_nowt.bash  slurm_effnet_528_leaves_prec_wt.bash
args/gbif/: create_gbif_db.bash  download_gbif_sheets.bash  gbif_audit_images.bash  gbif_create_db.bash  gbif_download_multiprocessing.bash  gbif_download_multitasking.bash  gbif_download_sheets.bash  gbif_find_duplicates.bash  gbif_update_dir.bash  gbif_update_state.bash  update_gbif_dir.bash
args/history/: append_old_data.bash  gbif_download_multiprocessing.bash  local_mae_224_pretraining.bash  slurm_effnet_600.bash  slurm_mae_224_pretraining.bash  slurm_vit_224.bash  slurm_vit_224_mae.bash  slurm_vit_224_reproductive_structure.bash  slurm_vit_224_train_all.bash  slurm_vit_224_train_flowers.bash  slurm_vit_224_train_flowers_no_mae.bash  slurm_vit_224_train_fruits.bash  slurm_vit_224_whole_plant.bash  slurm_vit_384_reproductive_condition.bash  slurm_vit_384_whole_plant.bash
args/local/: effnet.bash  effnet_528.bash  effnet_528_unk.bash  effnet_600.bash  effnet_hf.bash  effnet_pt.bash  effnet_sl.bash  effnet_unk.bash  ensemble_score_flowers.bash  infer_ensemble_1_debug.bash  local_effnet.bash  local_vit_224.bash  local_vit_384.bash  model_infer_flowers.bash  vit_224.bash  vit_384.bash  vit_384_lg.bash  vit_384_sl.bash  vit_384_unk.bash
args/slurm/: archive_images.bash  effnet_528.bash  effnet_528_flowers_acc_reg.bash  effnet_528_flowers_acc_sl.bash  effnet_528_flowers_f1_reg.bash  effnet_528_flowers_f1_sl.bash  effnet_528_flowers_f1_unk.bash  effnet_528_sl.bash  effnet_528_unk.bash  effnet_600.bash  effnet_600_flowers_acc_reg.bash  effnet_600_flowers_f1_sl.bash  effnet_600_flowers_f1_unk.bash  flower_more_votes_2025-06-26.bash  gbif_audit_images2.bash  gbif_audit_images2_0.bash  gbif_audit_images2_1.bash  gbif_audit_images2_2.bash  gbif_audit_images2_3.bash  gbif_audit_images_0.bash  gbif_audit_images_1.bash  gbif_audit_images_2.bash  gbif_audit_images_3.bash  model_infer_flowers.bash  model_infer_fruits.bash  model_infer_leaves.bash  model_sample_flowers.bash  model_sample_fruits.bash  move_flower_ensemble_fract_images.bash  move_flower_ensemble_neg_sample.bash  move_flower_ensemble_redbud_images.bash  template.bash  update_multimedia.sql  vit_224_lg_flowers_acc_reg.bash  vit_224_lg_flowers_acc_sl.bash  vit_224_lg_flowers_f1_unk.bash  vit_384_lg.bash  vit_384_lg_flowers.bash  vit_384_lg_flowers_acc_reg.bash  vit_384_lg_flowers_acc_sl.bash  (+5 more)
args/vit_224/: local_vit_224_flowers.bash  slurm_vit_224_flowers.bash  slurm_vit_224_flowers_mae.bash  slurm_vit_224_flowers_vae.bash  slurm_vit_224_fruits.bash  slurm_vit_224_leaves.bash  slurm_vit_224_reproductive_structure.bash  slurm_vit_224_whole_plant.bash
args/vit_384/: local_vit_384_flowers.bash  (+5 more)
datasets/: all_traits.csv  buds.csv  flowers.csv  fruits.csv  leaves.csv  remove_flowers.csv  remove_flowers.csv.csv  remove_fruits.csv.csv  test_data.csv
docs/: ensemble_tutorial.md
notebooks/: 00_explore_data.ipynb  01_gather_data.ipynb  02_build_database.ipynb  03_split_data.ipynb  accumulate_scores.ipynb  append_inat_data.ipynb  calc_confusion_matrix.py  choose_model.ipynb  compare_truths.ipynb  custom.css  explore_api.ipynb  fix_imbalances.ipynb  image_sizes.ipynb  model_parameters.ipynb  old_data.ipynb  sample_excluded_inferences.py  threshold_moving.ipynb
old/: mae_splits.py
phenobase/: ad_hoc_query.py  ad_hoc_ufit_utility.py  check.py  create_gbif_db.py  cull_images.py  download_gbif_sheets.py  download_images.py  download_inat_data.py  download_sheets.py  ensemble_archive.py  ensemble_audit_inference.py  ensemble_find_not_inferred.py  ensemble_format.py  ensemble_inferred_audit.py  ensemble_inferred_sample.py  ensemble_sample.py  ensemble_score.py  ensemble_search.py  ensemble_vote.py  extract_inat_data.py  gbif_audit_duplicate_images.py  gbif_audit_images.py  gbif_audit_images1.py  gbif_audit_images2.py  gbif_create_db.py  gbif_download.py  gbif_download_multiprocessing.py  gbif_download_multitasking.py  gbif_download_sheets.py  gbif_find_duplicates.py  gbif_update_state.py  get_image_metadata.py  model_audit_inferred.py  model_family_score.py  model_hard_vote.py  model_infer.py  model_infer_custom.py  model_inferred.py  model_inferred_audit.py  model_merge_scores.py  (+21 more)
slurm/: mae_224.bash
splits/: buds.csv  flowers.csv  fruits.csv  leaves.csv  split_all_3.csv  splits_metadata.csv  test_split.csv
tests/: test_smoke.py
(+123 files in other folders)
