[build-system]
requires = ["uv_build>=0.8.12"]
build-backend = "uv_build"

[project]
name = "phenobase"
version = "0.1.4"
description = ""
license = { file = "LICENSE" }
authors = [{ name = "Raphael LaFrance", email = "rafelafrance@proton.me" }]
requires-python = ">=3.13"
dependencies = [
  "Pillow",
  "accelerate",
  "datasets",
  "evaluate",
  "git-lfs",
  "ipython",
  "ipywidgets",
  "jupyterlab",
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "requests",
  "rich",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "tensorboard",
  "timm",
  "torch",
  # "torchvision",
  # "transformers",
  "tqdm",
  "marimo>=0.17.0",
  "altair>=5.5.0",
]

[tool.uv.build-backend]
module-root = "."
module-name = "phenobase"

[tool.ruff]
show-fixes = true

line-length = 88

exclude = [
  "run_mae.py",       # External code
  "**/external/*.py", # External code
]

[tool.ruff.lint]

select = ["ALL"]

ignore = [
  "A003",    # Class attribute is shadowing a Python builtin
  "ARG002",  # Unused method argument
  "COM812",  # Trailing comma missing
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in public method
  "D107",    # Missing docstring in public __init__
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "EM102",   # f-string-in-exception
  "FA102",   # Missing `from __future__ import annotations`
  "FIX002",  # Line contains TODO
  "G004",    # Logging statement uses f-string
  "ISC001",  # Implicitly concatenated string literals on one line
  "N818",    # Exception name {name} should be named with an Error suffix
  "PD901",   # Avoid using the generic variable name df for DataFrames
  "PLR0913", # Too many arguments in function definition ({c_args} > {max_args})
  "PLR0915", # Too many statements
  "PLR2004", # Magic value used in comparison
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "PLW0603", # Using the global statement to update {name} is discouraged
  "PT009",   # Use a regular assert instead of unittest-style {assertion}
  "RET504",  # Unnecessary assignment to {name} before return statement
  "RUF001",  # String contains ambiguous {}. Did you mean {}?
  "S603",    # subprocess call: check for execution of untrusted input
  "S608",    # Possible sql ingection vector through string-based query construction
  "SIM114",  # Combine if branches using logical or operator
  "SIM117",  # Use a single with statement with multiple contexts instead of nested with statements
  #    "SIM905",  # split-static-string
  "SLF001", # Private member accessed: {access}
  "T201",   # print found
  "TD002",  # Missing author in TODO
  "TD003",  # Missing issue link on the line following this TODO
]
