[build-system]
requires = ["uv_build>=0.8.12"]
build-backend = "uv_build"

[project]
name = "phenobase"
version = "0.1.4"
description = ""
license = { file = "LICENSE" }
authors = [{ name = "Raphael LaFrance", email = "rafelafrance@proton.me" }]
requires-python = ">=3.13"
dependencies = [
  "accelerate",
  "altair>=5.5.0",
  "datasets",
  "evaluate",
  "git-lfs",
  "ipython",
  "ipywidgets",
  "jupyterlab",
  "marimo>=0.17.0",
  "matplotlib",
  "numpy",
  "pandas",
  "pillow",
  "polars>=1.34.0",
  "pyarrow",
  "pytorch-triton-rocm",             # - pytorch-triton-rocm==3.5.0+git7416ffcb
  "requests",
  "rich",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "tensorboard",
  "torch>=2.10.0.dev20251013",       # - torch==2.10.0.dev20251013+rocm7.0
  "torchvision>=0.25.0.dev20251014", # - torchvision==0.25.0.dev20251014+rocm7.0
  "tqdm",
]

[dependency-groups]
dev = ["pre-commit>=4.3.0", "uv-build>=0.9.5"]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm" }]
torchvision = [{ index = "pytorch-rocm" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.0"
explicit = true

[tool.uv.build-backend]
module-root = "."
module-name = "phenobase"

[tool.ruff]
show-fixes = true

line-length = 88

exclude = [
  "run_mae.py",       # External code
  "**/external/*.py", # External code
  "notebooks/*",      # Marimo notebooks are sloppy
]

[tool.ruff.lint]

select = ["ALL"]

ignore = [
  "A003",    # Class attribute is shadowing a Python builtin
  "ARG002",  # Unused method argument
  "COM812",  # Trailing comma missing
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in public method
  "D107",    # Missing docstring in public __init__
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "EM102",   # f-string-in-exception
  "FA102",   # Missing `from __future__ import annotations`
  "FIX002",  # Line contains TODO
  "G004",    # Logging statement uses f-string
  "ISC001",  # Implicitly concatenated string literals on one line
  "LOG015",  # Use own logger instead TODO
  "N818",    # Exception name {name} should be named with an Error suffix
  "PLR0913", # Too many arguments in function definition ({c_args} > {max_args})
  "PLR0915", # Too many statements
  "PLR2004", # Magic value used in comparison
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "PLW0603", # Using the global statement to update {name} is discouraged
  "PT009",   # Use a regular assert instead of unittest-style {assertion}
  "RET504",  # Unnecessary assignment to {name} before return statement
  "RUF001",  # String contains ambiguous {}. Did you mean {}?
  "S603",    # subprocess call: check for execution of untrusted input
  "S608",    # Possible sql ingection vector through string-based query construction
  "SIM114",  # Combine if branches using logical or operator
  "SIM117",  # Use a single with statement with multiple contexts instead of nested with statements
  "SLF001",  # Private member accessed: {access}
  "T201",    # print found
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue link on the line following this TODO
]
